# JelloBeat

./: .gitignore  CLAUDE.md  package-lock.json  package.json
docs/: PLAN.md  SESSION.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/media/: mod.rs  windows_smtc.rs
src-tauri/src/overlay/: mod.rs
src/components/: NowPlayingCard.tsx
src/hooks/: useJelloPhysics.ts  useNowPlaying.ts
