[package]
name = "jellobest"
version = "0.1.0"
description = "Music overlay with jelly physics"
authors = []
edition = "2021"

[lib]
name = "jellobest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows-only: SMTC(Phase 1), Core Audio(Phase 5), overlay(Phase 3)
[target.'cfg(windows)'.dependencies.windows]
version = "0.61"
features = [
  "Foundation_Collections",
  "Media_Control",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Threading",
]

